@@ -1,3 +1,8 @@
+Mon Dec 25 00:31:05 CST 2000 Adam Heath <doogie@debian.org>
+
+  * include/dpkg.h.in, lib/mlib.c: Added generic setup code to buffer
+    copy loop.
+
 Sun Dec 24 23:48:45 CST 2000 Adam Heath <doogie@debian.org>
 
   * include/dpkg.h.in, lib/Makefile.in, lib/mlib.c, utils/Makefile.in,
